# aie-engineering-project

./: README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md
homeworks/HW03/eda-cli/reportS02/: correlation.csv  report.md  summary.csv  summary.json
homeworks/HW03/eda-cli/reportS03/: missing.csv  summary.json
homeworks/HW03/eda-cli/src/eda_cli/: cli.py
homeworks/HW03/eda-cli/tests/: test_core.py
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/reports_example/: report.md  summary.csv
homeworks/HW04/eda-cli/src/eda_cli/: api.py  core.py
homeworks/HW05/: HW05.ipynb
